github calender stats added

--- a/index.css
+++ b/index.css
@@ -551,7 +551,7 @@
         padding-bottom: 4rem;
 
     }
-    /* .calendarDiv h1{
+    .calendarDiv h1{
         font-size: 5rem;
         padding: 2rem;
     }
@@ -567,7 +567,7 @@
     }
     .abra{
         color: #E3E3E3;
-    } */
+    }
 
     
     
