--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
     }
     .header{
         display: grid;
-        grid-template-columns: 20% 40%;
+        grid-template-columns: 20% 60%;
         justify-content: space-between;
         align-items: center;
         width: 85%;
@@ -544,7 +544,7 @@
         color: #56617A;
     }
     .calendarDiv{
-        border: 10px solid red;
+        /* border: 10px solid red; */
         background-color: #F7F7F7;
         color: #56617A;
         text-align: center;
@@ -622,7 +622,7 @@
         .navbar li{
             padding: 1rem;
             font-weight: 400;
-            font-size: 2.5rem;
+            font-size: 1.5rem;
             border-bottom: 1px solid transparent;
         }
     
@@ -681,7 +681,7 @@
             display: flex;
         }
         .header li{
-            font-size: 1rem;
+            font-size: 0.5rem;
         }
         .landing::after{
             right: 43%;
